@@ -3,6 +3,8 @@ CHANGES IN FLTK 1.3.5					RELEASED: ??? ?? 2017
 
 Bug fixes and other improvements
 
+	- Add FL/platform.H for compatibility with FLTK 1.4 and higher.
+	  This file replaces FL/x.H in FLTK 1.4.0.
 	- Fix Fl_Text_Editor overstrike mode (STR #3463).
 	- More consistent and optimized "gleam" scheme box drawing.
 	- Fix a MinGW build error with new MinGW versions as of Feb 2018
